# compliance-ontology

./: .gitignore  CONTRIBUTING.md  README.md  compliance-ontology.ttl  compliance_helper.py  convert_formats.py  generate_docs.py  pyproject.toml
.github/workflows/: docs.yml
